force-app/main/default/objects/Grade__c/Grade__c.object-meta.xml
<CustomObject>
    <label>Grade</label>
    <pluralLabel>Grades</pluralLabel>
    <nameField>
        <label>Grade Name</label>
        <type>AutoNumber</type>
        <displayFormat>GRD-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>