force-app/main/default/objects/Grade__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Lookup</type>
    <referenceTo>Course__c</referenceTo>
    <relationshipName>Grades</relationshipName>
</CustomField>