force-app/main/default/objects/Grade__c/fields/Grade_Letter__c.field-meta.xml
<CustomField>
    <fullName>Grade_Letter__c</fullName>
    <label>Grade Letter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>B</fullName><default>false</default><label>B</label></value>
            <value><fullName>C</fullName><default>false</default><label>C</label></value>
            <value><fullName>D</fullName><default>false</default><label>D</label></value>
            <value><fullName>F</fullName><default>false</default><label>F</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>