force-app/main/default/objects/Grade__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Lookup</type>
    <referenceTo>Student__c</referenceTo>
    <relationshipName>Grades</relationshipName>
</CustomField>