force-app/main/default/objects/Grade__c/validationRules/Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Range</fullName>
    <active>true</active>
    <description>Score must be between 0 and 100</description>
    <errorConditionFormula>Score__c &lt; 0 || Score__c &gt; 100</errorConditionFormula>
    <errorMessage>Score must be between 0 and 100.</errorMessage>
</ValidationRule>